--- a/assets/styles/layouts/_button.scss
+++ b/assets/styles/layouts/_button.scss
@@ -1,58 +1,150 @@
+*, *:before, *:after {
+  transition:.2s ease-in-out;
+}
 
-.button {
-  position: absolute;
-  display: block;
-  text-align: center;
-  font: 2.5em/1em Arial, sans-serif;
-  color: #ffe5e5;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-  background: #e5e5e5;
-  width: 60vw;
-  height: 60vw;
-  top: 58%;
-  left: 50%;
-  margin: -30vw 0 0 -30vw;
-  border-radius: 50%;
-  box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 15px 10px rgba(255,255,255,0.5), 0 5px 10px rgba(0,0,0,0.75), 0 10px 10px rgba(0,0,0,0.5);
-  box-sizing: border-box;
-  padding: 78px 9px 0 0;
-  cursor: pointer;
-  transition: all 0.1s ease;
+html,body {
+  font-family:system-ui,helvetica neue,helvetica,arial,sans-serif;
+  font-weight:200;
+}
+
+.switches {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 60px;
 
   @media (min-width: 800px) {
-    width: 50vh;
-    height: 50vh;
-    margin: -25vh 0 0 -25vh;
+
+grid-template-columns: repeat(2, 1fr);
   }
 
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -5;
-    width: 66vw;
-    height: 66vw;
-    top: 58%;
-    left: 50%;
-    border-radius: 50%;
-    background: #e5e5e5;
-    top: -3vw;
-    left: -3vw;
-    box-shadow: inset 0 7px 15px rgba(255,255,255,0.5), inset 0 -7px 15px rgba(0,0,0,0.5);
-    border:2px solid #444;
+  @media (min-width: 1200px) {
 
-    @media (min-width: 800px) {
-      width: 56vh;
-      height: 56vh;
-      top: -3vh;
-      left: -3vh;
+grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.light-switch {
+  opacity:0;
+  position: absolute;
+  left:-9999px;
+  height:1px;
+  width:1px;
+
+  &:checked ~ #background {
+    background-color:#ebdbac;
+  }
+  &:checked + .light-switch-label {
+    box-shadow:0 2px 2px #d0b57b;
+    .switch {
+      box-shadow:0 10px 10px -5px rgba(233,219,176,1), 0 0 0 1px rgba(0,0,0,.1), 0 0 0 4px #fff4d3,0 0 0 5px rgba(0,0,0,.1);
+      &:before {
+        height:75px;
+        top:0px;
+        line-height:75px;
+        background:#fff4d3;
+        color:#64bf60;
+        text-shadow: 0 0 3px #38ff2e;
+      }
+      &:after {
+        height:70px;
+        bottom:5px;
+        line-height:70px;
+        background:#fffaea;
+        box-shadow:0 5px 0 #d0b57b;
+        color:#d7bf95;
+        text-shadow:0 0 0px transparent;
+      }
     }
-    
   }
+}
 
-  &:active {
-    box-shadow: inset 0 0 10px rgba(0,0,0,0.5), 0 5px 10px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.35);
-    color: #ffeded;
+.light-switch-label {
+  position:relative;
+  display:block;
+  height:300px;
+  width:200px;
+  z-index:1;
+  margin:0 auto;
+  background-color:#fff4d3;
+  border-radius:10px;
+  border:1px solid darken(#fff4d3,20%);
+  box-shadow:0 0 4px rgba(#132436,0.5);
+  .switch {
+    cursor:pointer;
+    height:150px;
+    width:100px;
+    background:#fffaea;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-75px 0 0 -50px;
+    border-radius:5px;
+    overflow:hidden;
+    box-shadow:0 10px 10px -5px rgba(233,219,176,0), 0 0 0 1px rgba(0,0,0,.1), 0 0 0 4px #fff4d3,0 0 0 5px rgba(0,0,0,.1);
+    &:before {
+      content:'ON';
+      display:block;
+      position:absolute;
+      height:70px;
+      text-align:center;
+      line-height:70px;
+      width:100px;
+      top:5px;
+      left:0;
+      background:#efe0b1;
+      color:#bfa371;
+      border-radius:5px 5px 0 0;
+    }
+    &:after {
+      content:'OFF';
+      display:block;
+      position:absolute;
+      height:75px;
+      text-align:center;
+      line-height:75px;
+      width:100px;
+      bottom:0;
+      left:0;
+      background:#fff4d3;
+      color:#a4441a;
+      text-shadow: 0 0 3px #ff4e00;
+      border-radius:0 0 5px 5px;
+    }
   }
+  .screw {
+    position:absolute;
+    height:16px;
+    width:16px;
+    border-radius:100%;
+    left:50%;
+    margin-left:-8px;
+    background:#e3d4a5;
+    overflow:hidden;
+    box-shadow:inset 0 2px 0 rgba(0,0,0,.15);
+    &:before {
+      content:'';
+      display:block;
+      position:absolute;
+      height:100%;
+      width:2px;
+      left:50%;
+      margin-left:-1px;
+      background:rgba(0,0,0,.2);
+    }
+    &:first-of-type {
+      top:30px;
+    }
+    &:last-of-type {
+      bottom:30px;
+    }
+  }
+}
 
+#background {
+  position:absolute;
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  background-color:#132436;
 }
