--- a/assets/styles/layouts/_button.scss
+++ b/assets/styles/layouts/_button.scss
@@ -11,6 +11,7 @@ html,body {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 60px;
+  padding:60px;
 
   @media (min-width: 800px) {
 
